# art

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ptrain/art/: DemoApp.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
art/: build.gradle
art/src/main/cpp/: CMakeLists.txt  art.cpp  dlopen.c  dlopen.h
art/src/main/cpp/xdllibs/: CMakeLists.txt  xdl.c  xdl_iterate.c  xdl_linker.c  xdl_lzma.c
art/src/main/java/com/ptrain/artimple/: ARTHook.java
gradle/wrapper/: gradle-wrapper.properties
